--- a/pgy/build.gradle
+++ b/pgy/build.gradle
@@ -14,7 +14,7 @@ repositories {
 }
 
 //基本信息
-group = 'cn.plugin.pgy'
+group = 'pgy'
 version = '1.0.0'
 
 //Bintray上传
@@ -23,9 +23,9 @@ publish {
     groupId = 'com.zy.plugin' //jcenter上的路径
     artifactId = 'pgy'//项目名称
     publishVersion = '1.0.0'//版本号
-    desc = 'pgy上传插件'//描述，不重要
+    desc = 'pgyPlugin'//描述，不重要
     //网站，不重要；尽量模拟github上的地址，例如我这样的；当然你有地址最好了
-    website = 'https://gitee.com/qingweiSun/gradle-plugin.git'
+    website = 'https://github.com/heyzhuyue/Plugin.git'
     bintrayUser = 'xiaozhu'
     bintrayKey = 'a1015537bc3d32d94dcdf455e60a0421edee43e2'
     dryRun = false
