--- a/cartlib/project.properties
+++ b/cartlib/project.properties
@@ -1,17 +1,14 @@
-#project
-#仓库名称，就是在bintray官网建立的仓库的名称
-project.repositoryName=maven
-#项目名称
-project.name=cartlib //注意:project名字 与 library名字一致 否则会出现上传文件目录结构问题
+#项目名称 注意:project名字 与 library名字一致 否则会出现上传文件目录结构问题
+project.name=cartlib
 #项目组id
-project.groupId=com.wz.cartlib
+project.groupId=com.wz.lib
 #项目id,一般同project.name
 project.artifactId=cartlib
 #打包类型
 project.packaging=aar
 #项目官方网站地址
-project.siteUrl=https://github.com/zy1301529626/MakerJcentre
+project.siteUrl=https://github.com/heyzhuyue/Plugin.git
 #项目git地址
-project.gitUrl=https://github.com/zy1301529626/MakerJcentre.git
+project.gitUrl=https://github.com/heyzhuyue/Plugin.git
 #生成的javadoc名称
 javadoc.name=cartlib
